RESOLVED FIXED247008
Always use percentages for computed values of font-stretch, never keywords
https://bugs.webkit.org/show_bug.cgi?id=247008
Summary Always use percentages for computed values of font-stretch, never keywords
Darin Adler
Reported 2022-10-25 08:42:12 PDT
CSS specification says that computed values of font-stretch are percentages, not keywords.
Attachments
Radar WebKit Bug Importer
Comment 2 2022-10-25 08:43:23 PDT
Darin Adler
Comment 3 2022-10-25 09:14:25 PDT
EWS
Comment 4 2022-10-28 06:06:01 PDT
Committed 256094@main (b724d37d49ca): <https://commits.webkit.org/256094@main> Reviewed commits have been landed. Closing PR #5760 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.