Always use percentages for computed values of font-stretch, never keywords https://bugs.webkit.org/show_bug.cgi?id=247008 rdar://problem/101546363

Reviewed by Tim Nguyen.

https://drafts.csswg.org/css-fonts/#propdef-font-stretch

Current CSS Fonts Module Level 4 says computed values are always serialized as a percentage.
This is a change since CSS Fonts Module Level 3 which said they should be computed "as specified".
Web Platform Tests currently has a mix; this updates tests to consistently expect the new form.

* LayoutTests/fast/css/getComputedStyle/computed-style-font-family-expected.txt:
Updated to expect "100%" instead of "normal".

* LayoutTests/fast/text/font-stretch-parse-expected.txt: Updated.
* LayoutTests/fast/text/font-stretch-parse.html: Updated to expect percentages.

* LayoutTests/fast/text/variations/out-of-bounds-selection-properties-expected.txt:
* LayoutTests/fast/text/variations/out-of-bounds-selection-properties.html:
Updated to expect "100%" instead of "normal".

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/animations/font-stretch-interpolation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/animations/font-stretch-interpolation.html:
Updated to expect percentages instead of keywords.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/inheritance-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-stretch-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/variations/font-stretch-expected.txt:
Updated for more PASS.

* LayoutTests/imported/w3c/web-platform-tests/css/css-variables/variable-presentation-attribute-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-variables/variable-presentation-attribute.html:
Updated to expect percentages instead of keywords.

* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
Updated for more PASS.

* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::fontStretch): Removed code path that checks for and uses keywords.

Canonical link: https://commits.webkit.org/256094@main